--- a/DZ_WPF_Base/DZ_WPF_Base.csproj
+++ b/DZ_WPF_Base/DZ_WPF_Base.csproj
@@ -64,6 +64,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Resource\BLL\Equipment_Base.cs" />
+    <Compile Include="Resource\BLL\Equipment_Data.cs" />
     <Compile Include="Resource\BLL\Manufacturer_Base.cs" />
     <Compile Include="Resource\BLL\Model_Base.cs" />
     <Compile Include="Resource\MCS.Context.cs">
